--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
     rel="stylesheet"
   />
 
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
    <!-- <link 
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
@@ -54,7 +57,27 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
   crossorigin="anonymous">
+
  </script> 
+
+
+<script>
+  $(document).ready(function(){
+    $('.btn').click(function(){
+      $('.popup_box').css("display", "block");
+    });
+    $('.btn1').click(function(){
+      $('.popup_box').css("display", "none");
+      window.location.reload(false);
+    });
+   
+    $('.btn2').click(function(){
+      $('.popup_box').css("display", "none");
+      alert("Account Permanently Deleted.");
+    });
+  });
+
+</script>
 
 </head>
 
