New update at 9.50pm 26jan

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 
 <script>
   $(document).ready(function(){
-    $('.btn').click(function(){
+    $('#contactbtn').click(function(){
       $('.popup_box').css("display", "block");
     });
     $('.btn1').click(function(){
