After deploying in fire base New file was Commited

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
   crossorigin="anonymous">  -->
 
  
-  <title>A React Landing Page Template</title>
+  <title>RebornIT Official Website</title>
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
 
@@ -61,7 +61,7 @@
  </script> 
 
 
-<script>
+<!-- <script>
   $(document).ready(function(){
     $('#contactbtn').click(function(){
       $('.popup_box').css("display", "block");
@@ -77,7 +77,7 @@
     });
   });
 
-</script>
+</script> -->
 
 </head>
 
